@@ -3,10 +3,17 @@ package org.zeros.farm_manager_server.Controllers;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.TransactionSystemException;
+import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.zeros.farm_manager_server.Exception.Enum.IllegalArgumentExceptionCause;
+import org.zeros.farm_manager_server.Exception.IllegalArgumentExceptionCustom;
 
 import java.rmi.NoSuchObjectException;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 
 @ControllerAdvice
@@ -23,9 +30,13 @@ public class ErrorController {
     }
 
     @ExceptionHandler
-    ResponseEntity<String> handleIllegalArgument(IllegalArgumentException exception) {
+    ResponseEntity<String> handleIllegalArgument(IllegalArgumentExceptionCustom exception) {
+        if (exception.getExceptionCause().equals(IllegalArgumentExceptionCause.OBJECT_DO_NOT_EXIST)) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(exception.getMessage());
+        }
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(exception.getMessage());
     }
+
     @ExceptionHandler
     ResponseEntity<String> handleNullArguments(NullPointerException exception) {
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(exception.getMessage());
@@ -36,16 +47,16 @@ public class ErrorController {
         return ResponseEntity.status(HttpStatus.METHOD_NOT_ALLOWED).body(exception.getMessage());
     }
 
-     /*   @ExceptionHandler(MethodArgumentNotValidException.class)
-        ResponseEntity handleBindErrors(MethodArgumentNotValidException exception){
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+        ResponseEntity<String> handleBindErrors(MethodArgumentNotValidException exception){
 
             List errorList = exception.getFieldErrors().stream()
                     .map(fieldError -> {
                         Map<String, String > errorMap = new HashMap<>();
                         errorMap.put(fieldError.getField(), fieldError.getDefaultMessage());
                         return errorMap;
-                    }).collect(Collectors.toList());
+                    }).toList();
 
-            return ResponseEntity.badRequest().body(errorList);
-        }*/
+            return ResponseEntity.badRequest().body(errorList.toString());
+        }
 }
